sub and sup vertical-align correction

--- a/stylesheets/globals.css
+++ b/stylesheets/globals.css
@@ -68,7 +68,8 @@
 		border-spacing: 0;
 	}
 	
-	
+	sub {vertical-align: sub;}
+	sup {vertical-align: super;}
 	
 	body { background: #fff; font-family: "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif; font-size: 13px; line-height: 18px; color: #555; position: relative; -webkit-font-smoothing: antialiased; }
 	
